--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Heb jij een geweldig video-idee, maar weet je niet waar je moet beginnen? Geen zorgen! Bij Elevated Frames helpen we je verder. We creëren hoogwaardige video's op maat, perfect afgestemd op jouw visie en wensen."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
