--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Heb jij een geweldig video-idee, maar weet je niet waar je moet beginnen? Geen zorgen! Bij Elevated Frames helpen we je verder. We creëren hoogwaardige video's op maat, perfect afgestemd op jouw visie en wensen."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="profielfoto.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
